# depression-companion

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  railway.toml  requirements.txt  setup.py  test_phase1.txt  test_phase2.txt  test_phase3.txt  test_phase4.txt  test_phase5.txt  test_phase6.txt  test_phase6_p2.txt
.github/workflows/: ci.yml
config/: config.yaml
config/experiments/: bert_reddit.yaml  cross_modal.yaml  ensemble.yaml  forecasting.yaml  llm_finetune.yaml  multi_task.yaml  rag_config.yaml  wav2vec2_daic.yaml
data/cbt_knowledge/: cbt_protocols.json
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
docs/: architecture.md
docs/ADR/: ADR-001-fastapi.md  ADR-002-postgresql.md  ADR-003-redis.md  ADR-004-deployment.md
frontend/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
notebooks/: attention_visualization.py
results/cross_modal_ablation/: ablation_results.json
scripts/: deploy_checklist.py  download_datasets.py  generate_report.py  run_ablation.py  run_forecasting.py  train_models.py
src/depression_companion/: __init__.py  config.py  exceptions.py  logging_config.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_attribution.py  test_audio_model.py  test_audio_processor.py  test_config.py  test_cross_modal.py  test_dataset.py  test_early_warning.py  test_ensemble.py  test_forecasting.py  test_multi_task.py  test_orchestrator.py  test_retriever.py  test_text_model.py  (+3 more)
(+26 files in other folders)
