[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depression-companion"
version = "0.1.0"
description = "Multimodal AI depression detection system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "transformers>=4.47.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0,<2.5.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "python-jose>=3.3.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]